--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Eclipse Hero</title>
-  <link rel="stylesheet" href="./style.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/hubot-sans">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" type="image/webp" href="https://cdn.discordapp.com/icons/1241081204661293086/8a88bdad651c0e4e682fd0b851a0061f.webp?size=96">
+  <title>Rio Executor</title>
 </head>
 <body>
 <!-- partial:index.partial.html -->
