--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="icon" type="image/webp" href="https://cdn.discordapp.com/icons/1241081204661293086/8a88bdad651c0e4e682fd0b851a0061f.webp?size=96">
-  <title>Rio Executor</title>
+  <title>Rio: #1 UD Cheat For Roblox!</title>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Rio Executor</title>
+  <title>Rio; #1 UD Cheat For ROBLOX</title>
 </head>
 <body>
   <div class="header">
