--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RIO Executor</title>
+    <title>RIO</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://use.typekit.net/zetta.css"> <!-- Assuming font-zetta is available here -->
+    <link rel="icon" href="https://cdn.discordapp.com/attachments/1244981194291150948/1263582841485263006/image-Photoroom-modified.png?ex=669ac2b9&is=66997139&hm=3082c9f53fff1aacc83573ed66d7353f1c4756f7dbeade2d18412f1e1da6c0f6" type="image/png">
     <style>
         html, body {
             overflow: hidden;
