--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>RIO</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://use.typekit.net/zetta.css"> <!-- Assuming font-zetta is available here -->
-    <link rel="icon" href="https://cdn.discordapp.com/attachments/1244981194291150948/1263582841485263006/image-Photoroom-modified.png?ex=669ac2b9&is=66997139&hm=3082c9f53fff1aacc83573ed66d7353f1c4756f7dbeade2d18412f1e1da6c0f6" type="image/png">
+    <link rel="icon" href="https://media.discordapp.net/attachments/1254084176899084349/1263584184123916472/image-Photoroom-modified.png?ex=669ac3f9&is=66997279&hm=0b8d06399575cd2c35d67697c3c060dca53e106fe77c8383ef5bd37c77d82e21&=&format=webp&quality=lossless" type="image/png">
     <style>
         html, body {
             overflow: hidden;
